export class Transaction {

    id

    constructor(rawTransaction) {
        this.id = rawTransaction.id
    }

}