DROP TABLE IF EXISTS rule CASCADE;

CREATE TABLE rule(
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255) NOT NULL UNIQUE,
    field VARCHAR(255) CHECK (field IN ('gas', 'from', 'to')),
    operator VARCHAR(3) CHECK (operator IN ('>', '=', '<')),
    check_value TEXT NOT NULL,
    configuration_id INT REFERENCES dynamic_configuration(id),
    created_at timestamp,
    updated_at timestamp
);